proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/imports.py
from math import sqrt as s
